2002-01-26  Naba Kumar <kh_naba@users.sourceforge.net>

	* src/compiler_options_cbs.c, compiler_options.h, compiler_options_gui.c,
	  Fixed Bug #499807, ie crash on removing libs, includes, defines from
	  the compiler options dialog.
	
	* ChangeLog:
	  Correct todays date. :)
	  
2002-01-26  Naba Kumar <kh_naba@users.sourceforge.net>

	* Fix for bug #499373
	
	* data/properties/anjuta.properties, ada.properties, cpp.properties,
	  java, properties, latex.properties, lua.properties, others.properties,
	  perl.properties:
	  
	  Added double-quotes around file arguments so that
	  filenames with spaces could also work.

	* launcher/anjuta-launcher.c, executer.c:
	  Escaped quotes in the cammand and it's arguments before executing
	  so that args with spaces can also work.
	  
	  Commented #DEBUG switch.
	  
2002-01-26  Naba Kumar <kh_naba@users.sourceforge.net>

	* scripts/*: Added files which I forgot previously.
	
	* src/aneditor.h: Lined up commands definition for better look.
	
	* src/mainmenu_callbacks.c. main_menu_def.h, main_menubar.c,
	  main_menubar.h, control.c:
	  Added three more convert EOL chars submenu items in transform.
	  Reformatted some some.
	
	* data/anjuta.properties:
	  Reformatted a line.
	
	* src/aneditor.h, aneditor.c:
	  Added three commands (with definitions) for EOL conversions.
	  
	* src/text_editor.c:
	  Editor detects file mode from the file content and
	  set the editing mode to CR/LF/CRLF automatically.
	  Refined Dos mode extrageneous chars filter
	  This will make sure that filter works only in Dos mode and not
	  in other modes.
	  
	* src/anjuta.c: Editor mode display in status bar.
	
	* src/preferences_gui.c: Changed the string for dos mode
	  filter to more sensible string.
	
	* src/aneditor.c: Default editor mode sets during widget creation
	  and not everty time the properties are loaded. This makes sure
	  that the auto-detected mode is not overridden by the default mode.
	  