@@ -1,7 +1,7 @@
 anjuta_datadir = $(prefix)/@NO_PREFIX_PACKAGE_DATA_DIR@
 
-anjuta_data_SCRIPTS = anjuta_import.sh
+bin_SCRIPTS = anjuta_import.sh
+
 anjuta_data_DATA = anjuta_project.template
 
-EXTRA_DIST = $(anjuta_data_SCRIPTS) $(anjuta_data_DATA)
-
+EXTRA_DIST = $(anjuta_data_DATA)
